--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,8 +20,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Configure Environment
-      run: apt install libgtest-dev
+    - name: Install GTest
+      run: sudo apt install -y libgtest-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
