--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install GTest
-      run: sudo apt install -y libgtest-dev
+      run: |
+        sudo apt install -y libgtest-dev
+        cd /usr/src/googletest
+        sudo cmake .
+        sudo cmake --build . --target install
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
