--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(timelib-tests ${TEST_SRC})
 find_package(GTest CONFIG REQUIRED)
 target_link_libraries(timelib-tests PRIVATE timelib GTest::gtest GTest::gtest_main)
 
-add_test(NAME TimeLibTests COMMAND TimeLibTests)
+add_test(NAME TimeLibTests COMMAND timelib-tests)
 
 include(GoogleTest)
 gtest_discover_tests(timelib-tests)
